WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
241693
[macOS] Unable to resume screen sharing after it is paused
https://bugs.webkit.org/show_bug.cgi?id=241693
Summary
[macOS] Unable to resume screen sharing after it is paused
Eric Carlson
Reported
2022-06-16 10:50:27 PDT
The ScreenCaptureKit-based media sources is unable to resume after it is paused
Attachments
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2022-06-16 10:50:41 PDT
rdar://93573937
Eric Carlson
Comment 2
2022-06-16 10:59:58 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/1582
EWS
Comment 3
2022-06-16 14:48:59 PDT
Committed
r295613
(
251618@main
): <
https://commits.webkit.org/251618@main
> Reviewed commits have been landed. Closing PR #1582 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug