[macOS] Unable to resume screen sharing after it is paused https://bugs.webkit.org/show_bug.cgi?id=241693 rdar://93573937

Reviewed by Youenn Fablet.

* Source/WebCore/platform/mediastream/mac/ScreenCaptureKitCaptureSource.mm:
(WebCore::ScreenCaptureKitCaptureSource::stop): Clear m_contentStream in the completion handler.
(WebCore::ScreenCaptureKitCaptureSource::startContentStream): Don't recreate instance variables
that already exist.

Canonical link: https://commits.webkit.org/251618@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@295613 268f45cc-cd09-0410-ab3c-d52691b4dbfc