Source/WebCore/platform/mediastream/mac/ScreenCaptureKitCaptureSource.mm
@@ -212,11 +212,13 @@ void ScreenCaptureKitCaptureSource::stop()
 
     if (m_contentStream) {
         auto stopHandler = makeBlockPtr([weakThis = WeakPtr { *this }] (NSError *error) mutable {
-            if (!error)
-                return;
 
             callOnMainRunLoop([weakThis = WTFMove(weakThis), error = RetainPtr { error }]() mutable {
-                if (weakThis)
+                if (!weakThis)
+                    return;
+
+                weakThis->m_contentStream = nil;
+                if (error)
                     weakThis->streamFailedWithError(WTFMove(error), "-[SCStream stopCaptureWithCompletionHandler:] failed"_s);
             });
         });
@@ -384,18 +386,20 @@ void ScreenCaptureKitCaptureSource::startContentStream()
         return;
     }
 
-    m_contentFilter = switchOn(m_content.value(),
-        [] (const RetainPtr<SCDisplay> display) -> RetainPtr<SCContentFilter> {
-            return adoptNS([PAL::allocSCContentFilterInstance() initWithDisplay:display.get() excludingWindows:@[]]);
-        },
-        [] (const RetainPtr<SCWindow> window)  -> RetainPtr<SCContentFilter> {
-            return adoptNS([PAL::allocSCContentFilterInstance() initWithDesktopIndependentWindow:window.get()]);
-        }
-    );
-
     if (!m_contentFilter) {
-        streamFailedWithError(nil, "Failed to allocate SCContentFilter"_s);
-        return;
+        m_contentFilter = switchOn(m_content.value(),
+            [] (const RetainPtr<SCDisplay> display) -> RetainPtr<SCContentFilter> {
+                return adoptNS([PAL::allocSCContentFilterInstance() initWithDisplay:display.get() excludingWindows:@[]]);
+            },
+            [] (const RetainPtr<SCWindow> window)  -> RetainPtr<SCContentFilter> {
+                return adoptNS([PAL::allocSCContentFilterInstance() initWithDesktopIndependentWindow:window.get()]);
+            }
+        );
+
+        if (!m_contentFilter) {
+            streamFailedWithError(nil, "Failed to allocate SCContentFilter"_s);
+            return;
+        }
     }
 
     if (!m_captureHelper)
@@ -405,10 +409,12 @@ void ScreenCaptureKitCaptureSource::startContentStream()
 
 #if HAVE(SC_CONTENT_SHARING_SESSION)
     if (ScreenCaptureKitSharingSessionManager::isAvailable()) {
-        m_contentSharingSession = ScreenCaptureKitSharingSessionManager::singleton().takeSharingSessionForFilter(m_contentFilter.get());
         if (!m_contentSharingSession) {
-            streamFailedWithError(nil, "Failed to get SharingSession"_s);
-            return;
+            m_contentSharingSession = ScreenCaptureKitSharingSessionManager::singleton().takeSharingSessionForFilter(m_contentFilter.get());
+            if (!m_contentSharingSession) {
+                streamFailedWithError(nil, "Failed to get SharingSession"_s);
+                return;
+            }
         }
 
         m_contentStream = adoptNS([PAL::allocSCStreamInstance() initWithSharingSession:m_contentSharingSession.get() captureOutputProperties:streamConfiguration().get() delegate:m_captureHelper.get()]);
